@@ -332,7 +332,7 @@ ViaInitXVMC(ScreenPtr pScreen)
     if (!(pVia->Chipset == VIA_CLE266) && !(pVia->Chipset == VIA_K8M800) &&
 	!(pVia->Chipset == VIA_PM800) && !(pVia->Chipset == VIA_VM800) &&
         !(pVia->Chipset == VIA_K8M890) && !(pVia->Chipset == VIA_P4M900) &&
-	&& !(pVia->Chipset == VIA_P4M890)) {
+	!(pVia->Chipset == VIA_P4M890)) {
 	xf86DrvMsg(pScrn->scrnIndex, X_WARNING,
 	    "[XvMC] Not supported on this chipset.\n");
 	return;
